--- a/Makefile.pkg
+++ b/Makefile.pkg
@@ -7,7 +7,7 @@
 # $ make -f Makefile.pkg
 #
 #change the name of the program here
-NAME=template
+NAME=distance
 
 #add extra c++ file(s) to compile here
 EXTRA_SRC=
